--- a/data.ipynb
+++ b/data.ipynb
@@ -15,23 +15,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import requests\n",
-    "# # https://web.inf.ufpr.br/vri/databases/breast-cancer-histopathological-database-breakhis/\n",
-    "# url = 'http://www.inf.ufpr.br/vri/databases/BreaKHis_v1.tar.gz'\n",
-    "# target_path = '/kaggle/working/BreaKHis_v1.tar.gz'\n",
+    "## Download data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "# response = requests.get(url, stream=True)\n",
-    "# if response.status_code == 200:\n",
-    "#     with open(target_path, 'wb') as f:\n",
-    "#         f.write(response.raw.read())\n",
-    "!wget http://www.inf.ufpr.br/vri/databases/BreaKHis_v1.tar.gz\n",
-    "!tar -xzf BreaKHis_v1.tar.gz -C .\n",
-    "# !mv /kaggle/working/BreaKHis_v1/BreaKHis_v1/ /kaggle/working/"
+    "# https://web.inf.ufpr.br/vri/databases/breast-cancer-histopathological-database-breakhis/\n",
+    "\n",
+    "# !mkdir data\n",
+    "# !wget http://www.inf.ufpr.br/vri/databases/BreaKHis_v1.tar.gz\n",
+    "# !tar -xzf BreaKHis_v1.tar.gz -C ./data/\n"
    ]
   },
   {
@@ -85,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = \"./BreaKHis_v1/histology_slides/breast\""
+    "base_path = \"./data/BreaKHis_v1/histology_slides/breast\""
    ]
   },
   {
