--- a/final_submissions/OxML_feature_extraction.ipynb
+++ b/final_submissions/OxML_feature_extraction.ipynb
@@ -44,7 +44,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import csv\n",
     "import pandas as pd\n",
     "from PIL import Image\n",
     "import torch\n",
@@ -212,15 +211,16 @@
     "id": "OMsDvIeAzZg8",
     "outputId": "1542e972-b8ce-4b75-fe26-f95d645dc95e",
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "all_files = os.listdir(data_root)\n",
@@ -240,13 +240,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "\n",
@@ -295,29 +296,23 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We got 0 non-matched\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "out_df"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
