--- a/final_submissions/OxML_feature_extraction_final_solution.ipynb
+++ b/final_submissions/OxML_feature_extraction_final_solution.ipynb
@@ -59,7 +59,8 @@
    "outputs": [],
    "source": [
     "#Configs\n",
-    "data_root = '/esat/smcdata/users/kkontras/Image_Dataset/no_backup/OxML/'\n",
+    "\n",
+    "data_root = '~/OxML/' #This data_root should contain the images in .png format and the label.csv\n",
     "submission_file = data_root + 'submission.csv'\n",
     "label_path = data_root + 'labels.csv'\n",
     "seed = 1"
