--- a/final_submissions/OxML_feature_extraction.ipynb
+++ b/final_submissions/OxML_feature_extraction.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "#Configs\n",
-    "data_root = '/esat/smcdata/users/kkontras/Image_Dataset/no_backup/OxML/'\n",
+    "data_root = '~/OxML/' #This data_root should contain the images in .png format and the label.csv\n",
     "submission_file = data_root + 'submission.csv'\n",
     "label_path = data_root + 'labels.csv'\n",
     "seed = 1"
