--- a/final_submissions/OxML_feature_extraction.ipynb
+++ b/final_submissions/OxML_feature_extraction.ipynb
@@ -20,19 +20,6 @@
  },
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "view-in-github",
-    "colab_type": "text",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/mayarali/carcinoma_classification/blob/fatih/OxML_feature_extraction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -211,16 +198,70 @@
     "id": "OMsDvIeAzZg8",
     "outputId": "1542e972-b8ce-4b75-fe26-f95d645dc95e",
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'densenet': {'adaboost': 0.5474,\n",
+      "              'knn': 0.5192,\n",
+      "              'naive bayes': 0.2769,\n",
+      "              'random forest': 0.5808,\n",
+      "              'svm': 0.5808,\n",
+      "              'xgboost': 0.5321},\n",
+      " 'efficientnet': {'adaboost': 0.4641,\n",
+      "                  'knn': 0.5654,\n",
+      "                  'naive bayes': 0.5641,\n",
+      "                  'random forest': 0.6154,\n",
+      "                  'svm': 0.5487,\n",
+      "                  'xgboost': 0.5308},\n",
+      " 'googlenet': {'adaboost': 0.4705,\n",
+      "               'knn': 0.4987,\n",
+      "               'naive bayes': 0.5808,\n",
+      "               'random forest': 0.5808,\n",
+      "               'svm': 0.5808,\n",
+      "               'xgboost': 0.4051},\n",
+      " 'mobilenet': {'adaboost': 0.4526,\n",
+      "               'knn': 0.2436,\n",
+      "               'naive bayes': 0.5808,\n",
+      "               'random forest': 0.5641,\n",
+      "               'svm': 0.5808,\n",
+      "               'xgboost': 0.4346},\n",
+      " 'resnet18': {'adaboost': 0.4679,\n",
+      "              'knn': 0.2577,\n",
+      "              'naive bayes': 0.5974,\n",
+      "              'random forest': 0.5808,\n",
+      "              'svm': 0.5808,\n",
+      "              'xgboost': 0.4487},\n",
+      " 'resnet50': {'adaboost': 0.4859,\n",
+      "              'knn': 0.3026,\n",
+      "              'naive bayes': 0.6141,\n",
+      "              'random forest': 0.5654,\n",
+      "              'svm': 0.5808,\n",
+      "              'xgboost': 0.4859},\n",
+      " 'shufflenet': {'adaboost': 0.5013,\n",
+      "                'knn': 0.291,\n",
+      "                'naive bayes': 0.6128,\n",
+      "                'random forest': 0.5808,\n",
+      "                'svm': 0.5808,\n",
+      "                'xgboost': 0.4859},\n",
+      " 'vgg16': {'adaboost': 0.4154,\n",
+      "           'knn': 0.3077,\n",
+      "           'naive bayes': 0.4038,\n",
+      "           'random forest': 0.4846,\n",
+      "           'svm': 0.5808,\n",
+      "           'xgboost': 0.4667}}\n"
+     ]
+    }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "all_files = os.listdir(data_root)\n",
@@ -240,14 +281,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "\n",
@@ -296,23 +336,31 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         id  malignant\n0    863080         -1\n1    996288         -1\n2    175012          0\n3    105480         -1\n4     74995         -1\n..      ...        ...\n119   67212         -1\n120  957521         -1\n121  757632         -1\n122  240314         -1\n123  959476         -1\n\n[124 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>malignant</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>863080</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>996288</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>175012</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>105480</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>74995</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>119</th>\n      <td>67212</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>120</th>\n      <td>957521</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>121</th>\n      <td>757632</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>122</th>\n      <td>240314</td>\n      <td>-1</td>\n    </tr>\n    <tr>\n      <th>123</th>\n      <td>959476</td>\n      <td>-1</td>\n    </tr>\n  </tbody>\n</table>\n<p>124 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "out_df"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
